@startuml

interface ComercioJugador {
    + ejecutar(Jugador): void
}

class Banca {
    - recursoAEntregar: Recurso
    - recursoDeseado: Recurso

    + ejecutar(Jugador): void
}

class ComercioInterno {
    - oferente: Jugador
    - recursosAEntregar: List<Recurso>
    - recursosDeseados: List<Recurso>

    + ejecutar(Jugador): void
}

interface ComercioPuerto {
    + ejecutar(Jugador, Vertice, List<Recurso>, List<Recurso>): void
}

class PuertoGenerico {
    + ejecutar(Jugador, Vertice, List<Recurso>, List<Recurso>): void
}

class PuertoEspecial {
    - tipoEspecial: Recurso

    + ejecutar(Jugador, Vertice, List<Recurso>, List<Recurso>): void
    + getTipoRecurso(): Recurso
}

class NullPuerto {
    + ejecutar(Jugador, Vertice, List<Recurso>, List<Recurso>): void
}

ComercioJugador <|.. Banca
ComercioJugador <|.. ComercioInterno

ComercioPuerto <|.. PuertoGenerico
ComercioPuerto <|.. PuertoEspecial
ComercioPuerto <|.. NullPuerto

Jugador <-- ComercioJugador
Jugador <-- ComercioPuerto
Vertice <-- ComercioPuerto
Recurso <-- ComercioJugador
Recurso <-- ComercioPuerto

@enduml